--- a/app1/manifest.yaml
+++ b/app1/manifest.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
         - name: nginx
-          image: nginx
+          image: cekharch/app1:v1
 ---
 apiVersion: v1
 kind: Service
