--- a/app1/manifest.yaml
+++ b/app1/manifest.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: app1
+  namespace: expense
   labels:
     app: app1
     env: prod
@@ -24,6 +25,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: expense
   name: app1
   labels:
     app: app1
