server block updated

--- a/app1/manifest.yaml
+++ b/app1/manifest.yaml
@@ -63,7 +63,7 @@ spec:
     http:
       paths:
         - path: /
-          pathType: prefix
+          pathType: Prefix
           backend:
             service:
               name: app1
